@@ -1,3 +1,0 @@
-declare x as array static 3 of int
-        ^
-9: error: "static" arrays are illegal outside of parameters
