@@ -1,3 +1,0 @@
-declare x as array * of int
-        ^
-9: error: variable length arrays are illegal outside of parameters
