@@ -27,6 +27,12 @@ error, e.g.:
 ** Fixed color prompts
 Prompts were always being displayed in color even when --color=never.  Fixed.
 
+** Function parameter checks
+No longer require certain declarations to be a function parameters: `const`,
+`volatile`, `static`, and variable length arrays; `[[carries_dependency]]`.
+This was changed so you can explain an individual function parameter
+declaration without having to wrap it inside a function declaration.
+
 ** Autocompletion word-break characters
 The set of word-break characters for autocompletion has been expanded to be
 (almost) all non-identifier characters.
